beep: add missing PKG_MIRROR_HASH
Signed-off-by: Yanase Yuki <dev@zpc.sakura.ne.jp>
(cherry picked from commit ac52356c0bdb11127013e291ad10add6b44784b2)

--- a/utils/beep/Makefile
+++ b/utils/beep/Makefile
@@ -17,6 +17,7 @@ PKG_SOURCE_URL:=https://github.com/johnath/beep.git
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=$(PKG_REV)
+PKG_MIRROR_HASH:=fc97d41e68d7b7e43a972e3416dd9326acc40efe66856271ccb36e3678464dec
 
 PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=COPYING
