tinyproxy: Add reverse proxy support
Signed-off-by: Nolan Woods <innovate.invent@gmail.com>

--- a/net/tinyproxy/files/tinyproxy.config
+++ b/net/tinyproxy/files/tinyproxy.config
@@ -249,3 +249,33 @@ list ConnectPort 563
 #  .        matches any host with no domain (in 'empty' domain)
 #  IP/bits  matches network/mask
 #  IP/mask  matches network/mask
+
+#
+#  Reverse Proxy settings
+#
+
+# When using Tinyproxy as a reverse proxy, it is STRONGLY recommended
+# that the normal proxy is turned off by setting this boolean option
+# to 1.
+#  option ReverseOnly 1
+
+# Setting this option to 1, makes Tinyproxy use a cookie to track
+# reverse proxy mappings. If you need to reverse proxy sites which
+# have absolute links you must use this option.
+#  option ReverseMagic 1
+
+# The URL that is used to access this reverse proxy. The URL is used
+# to rewrite HTTP redirects so that they won’t escape the proxy. If
+# you have a chain of reverse proxies, you’ll need to put the
+# outermost URL here (the address which the end user types into
+# his/her browser). If this option is not set then no rewriting of
+# redirects occurs.
+#  option ReverseBaseURL "https://example.com/"
+
+# Configure one or more ReversePath directives to enable reverse
+# proxy support. With reverse proxying it’s possible to make a number
+# of sites appear as if they were part of a single site.
+
+# config ReversePath 
+#   option path "/example/" 
+#   option target "http://www.example.com/"
