libmbim: switch to autorelease
Signed-off-by: Nicholas Smith <nicholas@nbembedded.com>
(cherry picked from commit 80b47a11b1c15558f2750aef5663c4f9a2a0744f)

--- a/libs/libmbim/Makefile
+++ b/libs/libmbim/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=libmbim
 PKG_VERSION:=1.26.0
-PKG_RELEASE:=1
+PKG_RELEASE:=$(AUTORELEASE)
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
 PKG_SOURCE_URL:=https://www.freedesktop.org/software/libmbim
