v2raya: Update to 1.5.3
- Added missing conffiles
- Refreshed init srcipt to adapt the new arguments
- Renamed package name to lowercase (suggestion from upstream)
- Updated dependencies and license

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit 16e453e4acc39eb0a3bc403f37697cd4083cdf14)

--- a/net/v2raya/Makefile
+++ b/net/v2raya/Makefile
@@ -5,15 +5,15 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=v2rayA
-PKG_VERSION:=1.5.2
+PKG_VERSION:=1.5.3
 PKG_RELEASE:=$(AUTORELEASE)
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://codeload.github.com/v2rayA/v2rayA/tar.gz/v$(PKG_VERSION)?
-PKG_HASH:=3611b9fa5a6e0421007f2a3ce9671847ffc39e82e1caa6782eff5db470e92fe0
+PKG_HASH:=0f6faeb297279dba138c2afc8525f090f965a0141a4f9d071165ea8500921a55
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)/service
 
-PKG_LICENSE:=GPL-3.0-only
+PKG_LICENSE:=AGPL-3.0-only
 PKG_LICENSE_FILES:=LICENSE
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
 
@@ -22,8 +22,7 @@ PKG_BUILD_PARALLEL:=1
 PKG_USE_MIPS16:=0
 
 GO_PKG:=github.com/v2rayA/v2rayA
-GO_PKG_LDFLAGS:=-s -w
-GO_PKG_LDFLAGS_X:=$(GO_PKG)/global.Version=$(PKG_VERSION)
+GO_PKG_LDFLAGS_X:=$(GO_PKG)/conf.Version=$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
 include ../../lang/golang/golang-package.mk
@@ -31,13 +30,15 @@ include ../../lang/golang/golang-package.mk
 TAR_OPTIONS+= --strip-components 1
 TAR_CMD=$(HOST_TAR) -C $(1)/.. $(TAR_OPTIONS)
 
-define Package/v2rayA
+define Package/v2raya
   TITLE:=A Linux web GUI client of Project V
   SECTION:=net
   CATEGORY:=Network
   SUBMENU:=Web Servers/Proxies
   DEPENDS:=$(GO_ARCH_DEPENDS) \
     +ca-bundle \
+    +iptables-mod-conntrack-extra \
+    +iptables-mod-extra \
     +iptables-mod-filter \
     +iptables-mod-tproxy \
     +kmod-ipt-nat6 \
@@ -45,9 +46,14 @@ define Package/v2rayA
   URL:=https://v2raya.org
 endef
 
-define Package/v2rayA/description
+define Package/v2raya/description
   v2rayA is a V2Ray Linux client supporting global transparent proxy,
   compatible with SS, SSR, Trojan(trojan-go), PingTunnel protocols.
+endef
+
+define Package/v2raya/conffiles
+/etc/v2raya/
+/etc/config/v2raya
 endef
 
 define Build/Compile
@@ -60,7 +66,7 @@ define Build/Compile
 	)
 endef
 
-define Package/v2rayA/install
+define Package/v2raya/install
 	$(call GoPackage/Package/Install/Bin,$(PKG_INSTALL_DIR))
 	$(INSTALL_DIR) $(1)/usr/bin/
 	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/v2rayA $(1)/usr/bin/v2raya
@@ -71,5 +77,5 @@ define Package/v2rayA/install
 	$(INSTALL_BIN) $(CURDIR)/files/v2raya.init $(1)/etc/init.d/v2raya
 endef
 
-$(eval $(call GoBinPackage,v2rayA))
-$(eval $(call BuildPackage,v2rayA))
+$(eval $(call GoBinPackage,v2raya))
+$(eval $(call BuildPackage,v2raya))
