libsodium: update maintainer email address
Signed-off-by: Damiano Renfer <x9w2n7xnu@relay.firefox.com>
(cherry picked from commit 7c529bab916572d981fd6063b6db353e77b45b36)

--- a/libs/libsodium/Makefile
+++ b/libs/libsodium/Makefile
@@ -16,7 +16,7 @@ PKG_SOURCE_URL:=https://download.libsodium.org/libsodium/releases \
 		https://github.com/jedisct1/libsodium/releases/download/$(PKG_VERSION)
 PKG_HASH:=6f504490b342a4f8a4c4a02fc9b866cbef8622d5df4e5452b46be121e46636c1
 
-PKG_MAINTAINER:=Damiano Renfer <damiano.renfer@gmail.com>
+PKG_MAINTAINER:=Damiano Renfer <x9w2n7xnu@relay.firefox.com>
 PKG_LICENSE:=ISC
 PKG_LICENSE_FILES:=LICENSE
 
