mwan3: update iptables dependencies
Signed-off-by: Florian Eckert <fe@dev.tdt.de>

--- a/net/mwan3/Makefile
+++ b/net/mwan3/Makefile
@@ -25,6 +25,7 @@ define Package/mwan3
      +ip \
      +ipset \
      +iptables \
+     +IPV6:ip6tables \
      +iptables-mod-conntrack-extra \
      +iptables-mod-ipopt \
      +jshn
