crowdsec: extend configs for user friendly generic usage
Signed-off-by: Kerma Gérald <gandalf@gk2.net>

--- a/net/crowdsec/files/crowdsec.config
+++ b/net/crowdsec/files/crowdsec.config
@@ -1,4 +1,6 @@
 config crowdsec 'crowdsec'
-	option data_dir '/srv/crowdsec/data'
-	option db_path '/srv/crowdsec/data/crowdsec.db'
-
+	option configdir	'/etc/crowdsec'
+	option data_dir	 	'/srv/crowdsec/data'
+	option db_path	  	'/srv/crowdsec/data/crowdsec.db'
+	option lapi_host	'127.0.0.1'
+	option lapi_port	'9999'
