crowdsec: add & use external lib functions script
crowdsec.script:
- add as /usr/lib/crowdsec/scripts/cs_script.sh for lib functions
crowdsec.initd:
- use cs_script.sh in crowdsec.initd
crowdsec.defaults:
- use cs_script.sh in crowdsec.defaults
Makefile:
- install cs_script.sh

Signed-off-by: Kerma Gérald <gandalf@gk2.net>

--- a/net/crowdsec/Makefile
+++ b/net/crowdsec/Makefile
@@ -191,6 +191,12 @@ define Package/crowdsec/install
 			./files/crowdsec.defaults \
 			$(1)/etc/uci-defaults/99_crowdsec
 
+	# SCRIPT (TOOLS)
+		$(INSTALL_DIR) $(1)/usr/lib/crowdsec/scripts
+		$(INSTALL_BIN) \
+			./files/crowdsec.script \
+			$(1)/usr/lib/crowdsec/scripts/cs_script.sh
+
 endef
 
 define Package/crowdsec-cli/install
