crowdsec-firewall-bouncer: fix new DEPENDS
PACKAGE_iptables-legacy instead of PACKAGE_iptables
and PACKAGE_iptables-nft instead of PACKAGE_nftables

Signed-off-by: Kerma Gérald <gandalf@gk2.net>

--- a/net/crowdsec-firewall-bouncer/Makefile
+++ b/net/crowdsec-firewall-bouncer/Makefile
@@ -47,7 +47,7 @@ endef
 
 define Package/crowdsec-firewall-bouncer
 $(call Package/crowdsec-firewall-bouncer/Default)
-  DEPENDS:=@(PACKAGE_iptables||PACKAGE_nftables) \
+  DEPENDS:=@(PACKAGE_iptables-legacy||PACKAGE_iptables-nft) \
 	$(GO_ARCH_DEPENDS)
 endef
 
