chrony: enable LTO
Size difference of the ipk on qoriq:
* chrony:	718571	676886
* chrony-nts:	786960	757064

Signed-off-by: Stijn Tintel <stijn@linux-ipv6.be>

--- a/net/chrony/Makefile
+++ b/net/chrony/Makefile
@@ -79,6 +79,9 @@ CONFIGURE_ARGS+= \
 
 CONFIGURE_VARS+=CPPFLAGS=-DNDEBUG
 
+TARGET_CFLAGS += -flto
+TARGET_LDFLAGS += -flto
+
 define Package/chrony/install
 	$(INSTALL_DIR) $(1)/usr/bin/
 	$(INSTALL_DIR) $(1)/usr/sbin/
