Flask: use AUTORELEASE
This helps in cases, when someone forgets to bump PKG_RELEASE

Signed-off-by: Josef Schlehofer <pepe.schlehofer@gmail.com>

--- a/lang/python/Flask/Makefile
+++ b/lang/python/Flask/Makefile
@@ -6,7 +6,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=Flask
 PKG_VERSION:=2.0.2
-PKG_RELEASE:=1
+PKG_RELEASE:=$(AUTORELEASE)
 
 PYPI_NAME:=$(PKG_NAME)
 PKG_HASH:=7b2fb8e934ddd50731893bdcdb00fc8c0315916f9fcd50d22c7cc1a95ab634e2
