crowdsec: fix BUILD_TIMESTAMP
use $(SOURCE_DATE_EPOCH) instead of $(shell date)

Signed-off-by: Kerma Gérald <gandalf@gk2.net>

--- a/net/crowdsec/Makefile
+++ b/net/crowdsec/Makefile
@@ -28,7 +28,7 @@ CWD_VARS += BUILD_VERSION="v$(PKG_VERSION)"
 CWD_VARS += BUILD_TAG="openwrt-$(PKG_VERSION)-$(PKG_RELEASE)"
 CWD_VARS += BUILD_GOVERSION="$(shell go version | cut -d " " -f3 | sed -E 's/[go]+//g')"
 CWD_VARS += BUILD_CODENAME="alphaga"
-CWD_VARS += BUILD_TIMESTAMP="$(shell date +%F"_"%T)"
+CWD_VARS += BUILD_TIMESTAMP="$(SOURCE_DATE_EPOCH)"
 CWD_VARS += DEFAULT_CONFIGDIR="${CWD_CONFIGPATH}"
 CWD_VARS += DEFAULT_DATADIR="$(CWD_DATAPATH)"
 
