openvswitch: enable AUTORELEASE
Enable AUTORELEASE in a separate commit so that the next commit can be
reverted without having to manually re-introduce it.

Signed-off-by: Stijn Tintel <stijn@linux-ipv6.be>
(cherry picked from commit cf1e1468588d69f413fc1305a3bdf811197551e6)
Signed-off-by: Yousong Zhou <yszhou4tech@gmail.com>

--- a/net/openvswitch/Makefile
+++ b/net/openvswitch/Makefile
@@ -17,7 +17,7 @@ include ./openvswitch.mk
 #
 PKG_NAME:=openvswitch
 PKG_VERSION:=$(ovs_version)
-PKG_RELEASE:=11
+PKG_RELEASE:=$(AUTORELEASE)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://www.openvswitch.org/releases/
 PKG_HASH:=7d5797f2bf2449c6a266149e88f72123540f7fe7f31ad52902057ae8d8f88c38
