shadowsocks-libev: Revert "dbg"
This reverts commit 0d18bd49f1ad1a9a52e2485680f026173d0854ee.

Signed-off-by: Yousong Zhou <yszhou4tech@gmail.com>

--- a/net/shadowsocks-libev/files/shadowsocks-libev.config
+++ b/net/shadowsocks-libev/files/shadowsocks-libev.config
@@ -1,12 +1,12 @@
 config ss_local
-	option disabled 0
+	option disabled 1
 	option server 'sss0'
 	option local_address '0.0.0.0'
 	option local_port '1080'
 	option timeout '30'
 
 config ss_tunnel
-	option disabled 0
+	option disabled 1
 	option server 'sss0'
 	option local_address '0.0.0.0'
 	option local_port '1090'
@@ -15,7 +15,7 @@ config ss_tunnel
 	option timeout '60'
 
 config ss_redir hi
-	option disabled 0
+	option disabled 1
 	option server 'sss0'
 	option local_address '0.0.0.0'
 	option local_port '1100'
@@ -26,7 +26,7 @@ config ss_redir hi
 	option reuse_port 1
 
 config ss_redir hj
-	option disabled 0
+	option disabled 1
 	option server 'sss0'
 	option local_address '0.0.0.0'
 	option local_port '1100'
@@ -37,7 +37,7 @@ config ss_redir hj
 	option reuse_port 1
 
 config ss_rules 'ss_rules'
-	option disabled 0
+	option disabled 1
 	option redir_tcp 'hi'
 	option redir_udp 'hi'
 	option src_default 'checkdst'
@@ -45,14 +45,12 @@ config ss_rules 'ss_rules'
 	option local_default 'checkdst'
 	list src_ips_forward '192.168.1.4'
 	list dst_ips_forward '8.8.8.8'
-	list dst_ips_forward '180.101.49.0/24'
-	list dst_ips_forward '112.80.248.0/24'
 
 config server 'sss0'
-	option disabled 0
-	option server '192.168.7.1'
+	option disabled 1
+	option server '192.168.1.3'
 	option server_port '9001'
-	option password '11111111'
+	option password '********'
 	option method 'aes-256-cfb'
 
 config ss_server
@@ -60,5 +58,3 @@ config ss_server
 	option server_port '9001'
 	option password '********'
 	option method 'aes-256-cfb'
-	option mode 'tcp_and_udp'
-	option verbose '1'
