strongswan: add new nftables updown content to own package
Move iptables related _updown stuff to its own package. This package
should be enabled and used, if fw4 is the default firewall.

Signed-off-by: Florian Eckert <fe@dev.tdt.de>

--- a/net/strongswan/Makefile
+++ b/net/strongswan/Makefile
@@ -457,6 +457,20 @@ $(call Package/strongswan/description/Default)
  This package contains the hotplug script for updown to add iptables rules.
 endef
 
+define Package/strongswan-updown-nftables
+$(call Package/strongswan/Default)
+  TITLE+= updown iptables
+  DEPENDS:= strongswan \
+    +strongswan-mod-updown \
+    +nftables \
+    +kmod-nft-xfrm
+endef
+
+define Package/strongswan-updown-nftables/description
+$(call Package/strongswan/description/Default)
+ This package contains the hotplug script for updown to add nftables rules.
+endef
+
 define BuildPlugin
   define Package/strongswan-mod-$(1)
     $$(call Package/strongswan/Default)
@@ -618,6 +632,24 @@ define Package/strongswan-updown-iptables/install
 		$(1)/etc/hotplug.d/ipsec/02-iptables
 endef
 
+define Package/strongswan-updown-nftables/install
+	$(INSTALL_DIR) $(1)/etc/hotplug.d/ipsec
+	$(CP) ./files/etc/hotplug.d/ipsec/02-nftables \
+		$(1)/etc/hotplug.d/ipsec/02-nftables
+
+	$(INSTALL_DIR) $(1)/usr/share/nftables.d/chain-pre/input
+	$(LN) /tmp/strongswan/nftables.d/pre-input.nft \
+		$(1)/usr/share/nftables.d/chain-pre/input/10_strongswan.nft
+
+	$(INSTALL_DIR) $(1)/usr/share/nftables.d/chain-pre/output
+	$(LN) /tmp/strongswan/nftables.d/pre-output.nft \
+		$(1)/usr/share/nftables.d/chain-pre/output/10_strongswan.nft
+
+	$(INSTALL_DIR) $(1)/usr/share/nftables.d/chain-pre/forward
+	$(LN) /tmp/strongswan/nftables.d/pre-forward.nft \
+		$(1)/usr/share/nftables.d/chain-pre/forward/10_strongswan.nft
+endef
+
 define Plugin/duplicheck/install
 	$(INSTALL_DIR) $(1)/usr/lib/ipsec/plugins
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/ipsec/duplicheck $(1)/usr/lib/ipsec/
@@ -686,6 +718,7 @@ $(eval $(call BuildPackage,strongswan-swanctl))
 $(eval $(call BuildPackage,strongswan-gencerts))
 $(eval $(call BuildPackage,strongswan-libtls))
 $(eval $(call BuildPackage,strongswan-updown-iptables))
+$(eval $(call BuildPackage,strongswan-updown-nftables))
 $(eval $(call BuildPlugin,addrblock,RFC 3779 address block constraint support,))
 $(eval $(call BuildPlugin,aes,AES crypto,))
 $(eval $(call BuildPlugin,af-alg,AF_ALG crypto interface to Linux Crypto API,+kmod-crypto-user))
