mosh-full: Add perlbase-text dependency
Fixes https://github.com/openwrt/packages/issues/18182

Signed-off-by: Jottr Doe <jottr@users.noreply.github.com>

--- a/net/mosh/Makefile
+++ b/net/mosh/Makefile
@@ -60,6 +60,7 @@ $(call Package/mosh/Default)
     +perlbase-selectsaver \
     +perlbase-socket \
     +perlbase-symbol \
+    +perlbase-text \
     +perlbase-tie \
     +perlbase-xsloader
 endef
