gcc: change maintainer
Signed-off-by: W. Michael Petullo <mike@flyn.org>
(cherry picked from commit abbe33b369e8c6f16352c9333988e6911ee3eced)

--- a/devel/gcc/Makefile
+++ b/devel/gcc/Makefile
@@ -16,7 +16,7 @@ define Package/gcc
   SECTION:=devel
   CATEGORY:=Development
   TITLE:=gcc
-  MAINTAINER:=Noble Pepper <gccmaintain@noblepepper.com>
+  MAINTAINER:=W. Michael Petullo <mike@flyn.org>
   DEPENDS:= +binutils +libstdcpp @!arc
   MENU:=1
 endef
