glib2: replace intl patch with upstream solution
Signed-off-by: Rosen Penev <rosenp@gmail.com>

--- a/libs/glib2/Makefile
+++ b/libs/glib2/Makefile
@@ -44,12 +44,10 @@ define Package/glib2/description
   The GLib library of C routines
 endef
 
-HOST_LDFLAGS += -Wl,-rpath,$(STAGING_DIR_HOSTPKG)/lib
 TARGET_CFLAGS += -ffunction-sections -fdata-sections
-TARGET_LDFLAGS += -Wl,--gc-sections $(if $(INTL_FULL),-lintl)
+TARGET_LDFLAGS += -Wl,--gc-sections
 
 COMP_ARGS= \
-	-Diconv=external \
 	-Dselinux=disabled \
 	-Dlibmount=disabled \
 	-Dman=false \
