gun: url formatting
Signed-off-by: Jonathan Bryant <jbryant6@apple.com>

--- a/libs/gun/Makefile
+++ b/libs/gun/Makefile
@@ -6,7 +6,7 @@ PKG_VERSION:=0.2020.1237
 PKG_RELEASE:=$(AUTORELEASE)
 
 PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
-PKG_SOURCE_URL:=https://registry.npmjs.org/$(PKG_NPM_NAME)/-/$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
+PKG_SOURCE_URL:=https://registry.npmjs.org/$(PKG_NPM_NAME)/-/
 PKG_HASH:=e798917f66a7195a9d620a7c4de3bdc331d32c83
 
 PKG_HOST_ONLY:=1
