mpd-full: remove partial BUILD_PATENTED on ffmpeg
This removes the guard "CONFIG_BUILD_PATENTED" for the ffmpeg build
feature for mpd-full. ffmpeg was already unconditionally registered as a
dependency (at line 51).

The ffmpeg package already handles whether or not to include patented
codecs internally using the same config flag, so guarding its use as a
dependency here does not appear necessary anymore.

(For reference: guard "BUILD_PATENTED" was introduced in 44eb12f for
ffmpeg, then partially removed by 326c973).

Signed-off-by: Pacien TRAN-GIRARD <pacien.trangirard@pacien.net>

--- a/sound/mpd/Makefile
+++ b/sound/mpd/Makefile
@@ -180,7 +180,7 @@ ifeq ($(BUILD_VARIANT),full)
 	-Dupnp=npupnp \
 	-Dmms=enabled \
 	-Dsoundcloud=enabled \
-	-Dffmpeg=$(if $(CONFIG_BUILD_PATENTED),en,dis)abled \
+	-Dffmpeg=enabled \
 	-Dmad=$(if $(CONFIG_BUILD_PATENTED),dis,en)abled \
 	-Dtremor=disabled \
 	-Dvorbis=enabled \
