mpd: add missing AUDIO_SUPPORT in CONFIG_DEPENDS
Signed-off-by: Pacien TRAN-GIRARD <pacien.trangirard@pacien.net>

--- a/sound/mpd/Makefile
+++ b/sound/mpd/Makefile
@@ -18,6 +18,7 @@ PKG_LICENSE:=GPL-2.0-or-later
 PKG_LICENSE_FILES:=COPYING
 
 PKG_CONFIG_DEPENDS:= \
+	CONFIG_AUDIO_SUPPORT \
 	CONFIG_BUILD_PATENTED \
 	CONFIG_IPV6 \
 
