Revert "Revert "strongswan: add strongswan-mod-socket""
This reverts commit d960988043243c532ce748df244fba3f60909a38.

Signed-off-by: Noel Kuntze <noel.kuntze@thermi.consulting>

--- a/net/strongswan/Makefile
+++ b/net/strongswan/Makefile
@@ -352,7 +352,7 @@ endef
 define Package/strongswan-charon
 $(call Package/strongswan/Default)
   TITLE+= IKEv1/IKEv2 keying daemon
-  DEPENDS:= strongswan
+  DEPENDS:= strongswan strongswan-mod-socket
 endef
 
 define Package/strongswan-charon/description
@@ -454,6 +454,9 @@ define BuildPlugin
     $$(call Package/strongswan/Default)
     TITLE:= StrongSwan $(2) plugin
     DEPENDS:= strongswan $(3)
+ifneq ($(4),)
+    PROVIDES:=strongswan-mod-$(4)
+endif
   endef
 
   define Package/strongswan-mod-$(1)/install
@@ -467,6 +470,13 @@ define BuildPlugin
   endef
 
   $$(eval $$(call BuildPackage,strongswan-mod-$(1)))
+endef
+
+define BuildPluginProvides
+ifeq ($(4),)
+    $$(error BuildPluginProvides requires provider suffix)
+endif
+  $(call BuildPlugin,$1,$2,$3,$4)
 endef
 
 CONFIGURE_ARGS+= \
@@ -736,8 +746,8 @@ $(eval $(call BuildPlugin,sha1,SHA1 crypto,))
 $(eval $(call BuildPlugin,sha2,SHA2 crypto,))
 $(eval $(call BuildPlugin,sha3,SHA3 and SHAKE crypto,))
 $(eval $(call BuildPlugin,smp,SMP configuration and control interface,+PACKAGE_strongswan-mod-smp:libxml2))
-$(eval $(call BuildPlugin,socket-default,default socket implementation for charon,))
-$(eval $(call BuildPlugin,socket-dynamic,dynamic socket implementation for charon,))
+$(eval $(call BuildPluginProvides,socket-default,default socket implementation for charon,,socket))
+$(eval $(call BuildPluginProvides,socket-dynamic,dynamic socket implementation for charon,,socket))
 $(eval $(call BuildPlugin,sql,SQL database interface,))
 $(eval $(call BuildPlugin,sqlite,SQLite database interface,+strongswan-mod-sql +PACKAGE_strongswan-mod-sqlite:libsqlite3))
 $(eval $(call BuildPlugin,sshkey,SSH key decoding,))
