Added missing dependencies on `libpam` and `libsasl2` if `CONFIG_SQUID_auth-basic=y`. Should fix https://github.com/openwrt/packages/issues/19093.

--- a/net/squid/Makefile
+++ b/net/squid/Makefile
@@ -37,6 +37,7 @@ define Package/squid
   $(call Package/squid/Default)
   MENU:=1
   DEPENDS:=+libpthread +librt +libltdl +libstdcpp +libatomic +USE_GLIBC:libbsd
+  DEPENDS+= +SQUID_auth-basic:libpam +SQUID_auth-basic:libsasl2
   DEPENDS+= +SQUID_use-gnutls:libgnutls +SQUID_use-openssl:libopenssl
   DEPENDS+= +SQUID_with-libcap:libcap
   DEPENDS+= +SQUID_with-nettle:libnettle
