Fixed build failure of `libsoup` if fortify source is globally enabled: Disabling it for `libsoup`. Should fix https://github.com/openwrt/packages/issues/19016.

--- a/libs/libsoup/Makefile
+++ b/libs/libsoup/Makefile
@@ -18,6 +18,7 @@ PKG_LICENSE:=LGPL-2.1-or-later
 PKG_LICENSE_FILES:=COPYING
 PKG_CPE_ID:=cpe:/a:gnome:libsoup
 
+PKG_FORTIFY_SOURCE:=0
 PKG_BUILD_DEPENDS:=glib2/host
 PKG_INSTALL:=1
 
