gnupg: add PKG_CPE_ID
Add PKG_CPE_ID:=cpe:/a:gnupg:gnupg to allow scanning for CVEs.

Signed-off-by: Nick Hainke <vincent@systemli.org>

--- a/utils/gnupg2/Makefile
+++ b/utils/gnupg2/Makefile
@@ -17,6 +17,7 @@ PKG_HASH:=10b55e49d78b3e49f1edb58d7541ecbdad92ddaeeb885b6f486ed23d1cd1da5c
 
 PKG_LICENSE:=GPL-3.0-or-later
 PKG_LICENSE_FILES:=COPYING COPYING.CC0 COPYING.GPL2 COPYING.LGPL21 COPYING.LGPL3 COPYING.other
+PKG_CPE_ID:=cpe:/a:gnupg:gnupg
 
 PKG_INSTALL:=1
 PKG_BUILD_PARALLEL:=1
