Revert "jose: fix static library usage"
This reverts commit c61b70918b6c10f6fd726b098474736a7e0ae9cd.

Signed-off-by: Rosen Penev <rosenp@gmail.com>
(cherry picked from commit f5d3b820c529de94f2a55e078e8f5f2ff87755e9)

--- a/libs/jose/Makefile
+++ b/libs/jose/Makefile
@@ -19,13 +19,15 @@ PKG_MAINTAINER:=Tibor Dudlák <tibor.dudlak@gmail.com>
 PKG_LICENSE:=Apache-2.0
 PKG_LICENSE_FILES:=COPYING
 
+PKG_BUILD_DEPENDS:=openssl
+
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/meson.mk
 
 define Package/jose
   SECTION:=utils
   TITLE:=Provides a full crypto stack including key generation, signing and encryption.
-  DEPENDS:=+jansson +libopenssl +zlib
+  DEPENDS:=+jansson
   URL:=https://github.com/latchset/jose
 endef
 
