An explanation for the force_dns option
Signed-off-by: Artem S. Tashkinov <birdie-github@users.noreply.github.com>

--- a/net/https-dns-proxy/files/https-dns-proxy.config
+++ b/net/https-dns-proxy/files/https-dns-proxy.config
@@ -1,6 +1,6 @@
 config main 'config'
 	option update_dnsmasq_config '*'
-	option force_dns '1'
+	option force_dns '1'  # this option will add firewall rules which block clients from accessing outside DNS servers usings ports 53 and 853
 	list force_dns_port '53'
 	list force_dns_port '853'
 # ports listed below are used by some
